# music-catalog-bootstrap

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.ko.md  README.md  ROADMAP.md  SECURITY.md  catalog  catalog.bat  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: decision-model.md  direct-apply.md  review-queue.md
examples/direct-apply/: README.md
examples/sample-output/: README.md  artists.csv  bootstrap-apply-mysql.txt  bootstrap-apply-postgres.txt  bootstrap-dry-run.txt  bootstrap-export-sql.txt  catalog.postgres.sql  catalog.sql  decisions.csv  export-report-postgres.txt  export-report.txt  import-report.txt  plan-report.txt  (+4 more)
fixtures/: invalid-apply-missing-host.properties  invalid-apply-port.properties  musicbrainz_release_subset.jsonl  sample-target-mysql-apply.properties  sample-target-postgres-apply.properties  sample-target-postgres.properties  sample-target.properties  sample_releases.csv
scripts/: build-release.bat  build-release.ps1  build-release.py  check-mvp.ps1  check-target-export.ps1  export-sample-sql.bat  export-sample-sql.ps1  plan-sample.bat  plan-sample.ps1  prepublish-check  prepublish-check.bat  prepublish-check.py  run-cli.ps1  run-sample.bat  run-sample.ps1  smoke-apply  smoke-apply.bat  smoke-apply.ps1  smoke-release.py
tests/: test_bootstrap.py  test_catalog_import.py  test_musicbrainz_import.py  test_plan_and_export.py  test_target_profiles.py
(+13 files in other folders)
