[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-catalog-bootstrap"
version = "0.1.0"
description = "Safely bootstrap a music service catalog from MusicBrainz release dumps."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["musicbrainz", "music-catalog", "bootstrap", "postgresql", "mysql"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
apply = [
    "psycopg[binary]>=3.2,<4",
    "mysql-connector-python>=9.6.0,<10",
]

[project.scripts]
music-catalog-bootstrap = "music_catalog_bootstrap.cli:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
